# MiniappsAI-API

./: README.md  pyproject.toml  ws.har
.github/workflows/: python-publish.yml
miniapps_api/: __init__.py  client.py
miniapps_webapi/: client.py  constants.py  exceptions.py
miniapps_webapi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
