[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "miniapps_webapi"
version = "1.0.0"
description = "Reverse-engineered Python client for the MiniApps.ai API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["miniapps", "ai", "chatbot", "client", "reverse-engineered"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "requests>=2.31",
    "python-socketio>=5.11",
    "websocket-client>=1.7",
]

[project.optional-dependencies]
dev = ["pytest>=7", "black", "ruff"]

[project.urls]
Homepage = "https://github.com/cyber-wojtek/MiniappsAI-API"
Issues   = "https://github.com/cyber-wojtek/MiniappsAI-API/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["miniapps_webapi*"]

[tool.ruff]
line-length = 100
